[backend/frontend] Add security platform for inject expectation dimension