@@ -1,9 +1,11 @@
 package io.openbas.helper;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import io.openbas.database.model.InjectExpectation;
 import io.openbas.database.model.InjectExpectation.EXPECTATION_STATUS;
-import io.openbas.database.model.InjectExpectationResult;
-import java.util.List;
+import io.openbas.database.raw.RawInjectExpectation;
 import org.jetbrains.annotations.NotNull;
 
 public class InjectExpectationHelper {
@@ -16,7 +18,8 @@ public class InjectExpectationHelper {
       return EXPECTATION_STATUS.PENDING;
     }
     if (injectExpectation.getTeam() != null) {
-      return computeStatusForTeam(injectExpectation.getResults());
+      return computeStatusForTeam(
+          injectExpectation.getResults().getFirst().getResult());
     }
 
     if (injectExpectation.getScore() >= injectExpectation.getExpectedScore()) {
@@ -28,10 +31,36 @@ public class InjectExpectationHelper {
     return EXPECTATION_STATUS.PARTIAL;
   }
 
-  public static EXPECTATION_STATUS computeStatusForTeam(
-      @NotNull final List<InjectExpectationResult> results) {
-    String result = results.getFirst().getResult().toUpperCase();
-    return switch (result) {
+  public static EXPECTATION_STATUS computeStatusForIndexing(
+      @NotNull final RawInjectExpectation injectExpectation) {
+    if (injectExpectation.getInject_expectation_score() == null) {
+      return EXPECTATION_STATUS.PENDING;
+    }
+    if (injectExpectation.getTeam_id() != null) {
+      ObjectMapper mapper = new ObjectMapper();
+      try {
+        JsonNode node = mapper.readTree(injectExpectation.getInject_expectation_results());
+        return computeStatusForTeam(node.get(0).get("result").asText());
+      } catch (JsonProcessingException e) {
+        return EXPECTATION_STATUS.PENDING;
+      }
+    }
+
+    if (injectExpectation.getInject_expectation_score()
+        >= injectExpectation.getInject_expectation_expected_score()) {
+      return EXPECTATION_STATUS.SUCCESS;
+    }
+    if (0.0 == injectExpectation.getInject_expectation_score()) {
+      return EXPECTATION_STATUS.FAILED;
+    }
+    return EXPECTATION_STATUS.PARTIAL;
+  }
+
+  public static EXPECTATION_STATUS computeStatusForTeam(final String result) {
+    if (result == null) {
+      return EXPECTATION_STATUS.PENDING;
+    }
+    return switch (result.toUpperCase()) {
       case "FAILED" -> EXPECTATION_STATUS.FAILED;
       case "SUCCESS" -> EXPECTATION_STATUS.SUCCESS;
       case "PARTIAL" -> EXPECTATION_STATUS.PARTIAL;
